theme: Fix caption border gap
Since widnows decorations with round corners has a special shape,
which when scaled we can't match with a simple border-radius.
So to prevent to show a gap between the caption border and the
caption itself, apply a shadow.

--- a/data/theme/_common.scss
+++ b/data/theme/_common.scss
@@ -944,6 +944,10 @@ StScrollBar {
   .window-clone-border {
     border: 4px solid $selected_bg_color;
     border-radius: 4px;
+    // For window decorations with round corners we can't match
+    // the exact shape when the window is scaled. So apply a shadow
+    // to fix that case
+    box-shadow: inset 0px 0px 0px 1px $selected_bg_color;;
   }
   .window-caption {
     spacing: 25px;
