--- a/data/theme/gnome-shell.css
+++ b/data/theme/gnome-shell.css
@@ -1200,7 +1200,8 @@ StScrollBar {
 
 .window-clone-border {
   border: 4px solid #215d9c;
-  border-radius: 4px; }
+  border-radius: 4px;
+  box-shadow: inset 0px 0px 0px 1px #215d9c; }
 
 .window-caption {
   spacing: 25px;
